--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,16 +2,14 @@
 import NavItem from "./NavItem.astro";
 ---
 
-<nav class="w-1/4 flex flex-col items-center">
-  <div>
-    <h1 class="font-bold text-xl">Tyler Jones</h1>
-    <ul class="leading-8">
-      <NavItem title="Home" href="/" />
-      <NavItem title="Portraits" href="/portraits" />
-      <NavItem title="Echoes" href="/echoes" />
-      <NavItem title="About" href="/about" />
-      <NavItem title="Contact" href="/contact" />
-      <NavItem title="Music" href="/music" />
-    </ul>
-  </div>
+<nav class="w-max flex flex-col items-start">
+  <h1 class="font-bold text-xl w-max">Tyler Jones</h1>
+  <ul class="leading-8">
+    <NavItem title="Home" href="/" />
+    <NavItem title="Portraits" href="/portraits" />
+    <NavItem title="Echoes" href="/echoes" />
+    <NavItem title="About" href="/about" />
+    <NavItem title="Contact" href="/contact" />
+    <NavItem title="Music" href="/music" />
+  </ul>
 </nav>
