--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body
-    class="flex flex-col md:flex-row md:items-center bg-white dark:bg-black text-black dark:text-purple-500 dark:selection:bg-purple-500 dark:selection:text-black font-mono"
+    class="flex flex-col gap-x-4 bg-white font-mono text-black dark:bg-black dark:text-purple-500 dark:selection:bg-purple-500 dark:selection:text-black md:flex-row md:items-center md:px-12"
   >
     <!-- Nav -->
     <Nav />
@@ -44,7 +44,7 @@ const { title } = Astro.props;
   }
   main {
     height: 100%;
-    width: 75%;
+    width: 100%%;
     display: flex;
     flex-direction: column;
   }
