--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
+import Slider from "components/Slider.jsx";
 import Layout from "layouts/Layout.astro";
-import Slider from "components/Slider.astro";
 ---
 
 <Layout title="Tyler Jones">
   <main>
-    <Slider />
+    <Slider client:only="react" />
   </main>
 </Layout>
