--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Slider from "components/Slider.jsx";
+import Slider from "components/Slider";
 import Layout from "layouts/Layout.astro";
 ---
 
